--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "@/layouts/Layout.astro";
+thing: "hey";
+pageTitle: "Home";
 ---
 
-<Layout>
-	<Welcome />
+<Layout class="">
+  <img class="md:ml-50 w-150" src="./bird-crab.png" />
 </Layout>
